[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={ version="4.4.0", features=["openssl"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

openssl={version="0.10"}
tokio="1.33.0"
